feat: Generate config when server finish loading